derive_tests/tests/compile_fail/nested_no_modify.stderr
error: Unrecognized modify parameter
 --> tests/compile_fail/nested_no_modify.rs:7:14
  |
7 |     #[modify(nested)]
  |              ^^^^^^
